--- a/notebooks/dataset_analysis.ipynb
+++ b/notebooks/dataset_analysis.ipynb
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0dfe7bec",
    "metadata": {},
    "outputs": [],
@@ -530,17 +530,12 @@
     "def clean_series(series: pd.Series) -> pd.Series:\n",
     "    \"\"\"\n",
     "    Funzione di pulizia vettorizzata:\n",
-    "    - Converte in minuscolo.\n",
-    "    - MANTIENE caratteri tecnici comuni (., :, \\\\, /, _, -).\n",
-    "    - RIMUOVE solo la punteggiatura puramente grammaticale (es. !, ?, ,).\n",
     "    - Normalizza gli spazi.\n",
     "    \"\"\"\n",
-    "    # 1. Gestisce NaN/None e li converte in stringa vuota\n",
+    "    # Gestisce NaN/None e li converte in stringa vuota\n",
     "    s_cleaned = series.fillna('')\n",
     "    \n",
-    "    # 2. Applica tutte le trasformazioni\n",
-    "    s_cleaned = s_cleaned.str.lower()\n",
-    "    s_cleaned = s_cleaned.str.replace(r'[^a-z0-9\\s.:\\\\/_-]', ' ', regex=True)\n",
+    "    # Applica tutte le trasformazioni\n",
     "    s_cleaned = s_cleaned.str.replace(r'\\s+', ' ', regex=True)\n",
     "    s_cleaned = s_cleaned.str.strip()\n",
     "    \n",
@@ -625,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "54943803",
    "metadata": {},
    "outputs": [],
@@ -635,10 +630,9 @@
     "#  Pretrained models from https://www.sbert.net/docs/sentence_transformer/pretrained_models.html\n",
     "MODEL = 'multi-qa-mpnet-base-dot-v1'\n",
     "\n",
-    "# 1. Carica un modello (leggero e multilingue, ottimo per iniziare)\n",
+    "# Carica un modello\n",
     "model = SentenceTransformer(MODEL, device='cpu')\n",
     "\n",
-    "# 2. Prendi la tua colonna di testo dal DataFrame\n",
     "sentences = processed_data['text'].tolist()"
    ]
   },
@@ -669,7 +663,7 @@
     }
    ],
    "source": [
-    "# 2. Get the tokenizer from the model\n",
+    "# Get the tokenizer\n",
     "tokenizer = model.tokenizer\n",
     "\n",
     "# Get the model's maximum token limit\n",
@@ -703,8 +697,8 @@
     ")\n",
     "\n",
     "# Add labels and title\n",
-    "plt.title('Distribution of Ticket Lengths (Approximate Tokens)')\n",
-    "plt.xlabel('Approximate Token Count (Characters / 4)')\n",
+    "plt.title('Distribution of Ticket Lengths')\n",
+    "plt.xlabel('Token Count')\n",
     "plt.ylabel('Number of Tickets')\n",
     "plt.legend()\n",
     "plt.grid(axis='y', linestyle='--', alpha=0.7)"
@@ -786,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d21e5091",
    "metadata": {},
    "outputs": [
@@ -812,11 +806,12 @@
     "  index.add(embeddings)\n",
     "else:\n",
     "  print(\"Using IVF Flat Index\")\n",
-    "  # Number of clusters used for faiss. Select a value 4*sqrt(N) to 16*sqrt(N) - \n",
+    "  # Number of clusters used for faiss. Select a value 4*sqrt(N) to 16*sqrt(N)\n",
     "  n_clusters = int(4*np.sqrt(num_tickets))\n",
     "  print(f\" - Number of clusters: {n_clusters}\")\n",
     "\n",
-    "  # We use Inner Product (dot-product) as Index. We will normalize our vectors to unit length, then is Inner Product equal to cosine similarity\n",
+    "  # We use Inner Product (dot-product) as Index. \n",
+    "  # We will normalize our vectors to unit length, then is Inner Product equal to cosine similarity\n",
     "  quantizer = faiss.IndexFlatIP(embedding_size)\n",
     "  index = faiss.IndexIVFFlat(quantizer, embedding_size, n_clusters, faiss.METRIC_INNER_PRODUCT)\n",
     "\n",
@@ -832,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a9831c6a",
    "metadata": {},
    "outputs": [
@@ -903,7 +898,7 @@
     "    start_time = time.time()\n",
     "    question_embedding = model.encode(inp_question)\n",
     "\n",
-    "    # FAISS works with inner product (dot product). When we normalize vectors to unit length, inner product is equal to cosine similarity\n",
+    "    # FAISS works with inner product.\n",
     "    question_embedding = question_embedding / np.linalg.norm(question_embedding)\n",
     "    question_embedding = np.expand_dims(question_embedding, axis=0)\n",
     "\n",
